<resources>
    <string name="app_name">Selfstudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_reward">Rewards</string>

    <string name="nav_home">Home</string>
    <string name="nav_test">Test</string>
    <string name="nav_analysis">Analysis</string>
    <string name="nav_doubts">Doubts</string>
    <string name="nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upgrade_notify_text">Your free trial expired on 29 Jan 2019 Please upgrade now to get full access</string>
</resources>
